--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
 
 .logo{
     padding: 10px;
-    margin-left: 7.5%;
+    margin-left: 16%;
 }
 
 .header{
@@ -18,10 +18,10 @@ body{
 }
 
 .buttons{
-    background: gray;
-    width: 65%;
+    background: black;
+    width: 950px;
     height: 30px;
-    margin-left: 6%;
+    margin-left: 12.5%;
     padding: 5px;
     padding-left: 25px;
     padding-top: 12.5px;
@@ -30,9 +30,35 @@ body{
 
 .button{
     text-decoration: none;
+    color: white;
+    font-weight: bold;
 }
 
 .headerLogo{
     width: 100%;
     height: 100%;
+}
+
+.images{
+    padding: 25px 200px;
+    display: grid;
+    grid-template-columns: auto auto auto
+}
+
+.bannerImg1{
+    margin-left: 275px;
+    grid-row: 1/48;
+}
+
+.bannerImg2{
+    grid-row: 1/48;
+}
+
+.bannerImg3{
+    margin-right: 275px;
+    grid-row: 1/48;
+}
+
+.bannerImg1:hover .bannerImg2:hover .bannerImg3:hover{
+    color: black;
 }
