--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body{
     padding: 0;
     margin: 0;
+    display: grid;
 }
 
 .logo{
@@ -41,24 +42,62 @@ body{
 
 .images{
     padding: 25px 200px;
-    display: grid;
     grid-template-columns: auto auto auto
 }
 
 .bannerImg1{
     margin-left: 275px;
-    grid-row: 1/48;
 }
 
 .bannerImg2{
-    grid-row: 1/48;
+    padding: 0 10px;
 }
 
 .bannerImg3{
     margin-right: 275px;
-    grid-row: 1/48;
 }
 
 .bannerImg1:hover .bannerImg2:hover .bannerImg3:hover{
     color: black;
+}
+
+.text{
+    background: yellow;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+    margin-bottom: 25px;
+}
+
+.textTitle{
+    font-weight: bold;
+    font-size: 25px;
+    padding-top: 10px;
+    margin-left: 475px;
+}
+
+.textText{
+    font-weight: bold;
+    margin-left: 20px;
+}
+
+.textP{
+    margin: 0;
+    padding: 25px 0;
+}
+
+.textButtonText{
+    margin-left: 390px;
+    border: 1px solid white;
+    background: white;
+    padding: 5px 25px;
+}
+
+.textButtonText:hover{
+    background: black;
+    color: white;
+}
+
+.footerLogo{
+    width: 100%;
+    height: 100%;
 }
