--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body{
     display: grid;
 }
 
+a{
+    text-decoration: none;
+}
+
 .logo{
     padding: 10px;
     margin-left: 16%;
@@ -30,7 +34,6 @@ body{
 }
 
 .button{
-    text-decoration: none;
     color: white;
     font-weight: bold;
 }
@@ -38,27 +41,6 @@ body{
 .headerLogo{
     width: 100%;
     height: 100%;
-}
-
-.images{
-    padding: 25px 200px;
-    grid-template-columns: auto auto auto
-}
-
-.bannerImg1{
-    margin-left: 275px;
-}
-
-.bannerImg2{
-    padding: 0 10px;
-}
-
-.bannerImg3{
-    margin-right: 275px;
-}
-
-.bannerImg1:hover .bannerImg2:hover .bannerImg3:hover{
-    color: black;
 }
 
 .text{
@@ -100,4 +82,52 @@ body{
 .footerLogo{
     width: 100%;
     height: 100%;
+}
+
+.images{
+    padding: 25px 200px;
+    grid-template-columns: auto auto auto;
+}
+
+.bannerImg1{
+    margin-left: 275px;
+    background: url("../img/banner-1.jpg") no-repeat;
+    width: 300px;
+    height: 220px;
+}
+
+.bannerImg2{
+    margin: 0 10px;
+    background: url("../img/banner-2.jpg") no-repeat;
+    width: 300px;
+    height: 220px;
+}
+
+.bannerImg3{
+    margin-right: 275px;
+    background: url("../img/banner-3.jpg") no-repeat;
+    width: 300px;
+    height: 220px;
+}
+
+.bannerImg1:hover .bannerText1{
+    opacity: .6;
+    color: white;
+}
+
+.bannerImg2:hover .bannerText2{
+
+}
+
+.bannerImg3:hover .bannerText3{
+
+}
+
+.bannerText1, .bannerText2, .bannerText3{
+    max-width: 100%;
+    max-height: 100%;
+    background: black;
+    opacity: 0;
+    text-align:center;
+    padding: 110px 110px;
 }
