--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ a{
     margin-left: 10%;
     width: 75%;
     height: 25%;
-    background: color;
 }
 
 .buttons{
@@ -88,55 +87,48 @@ a{
     padding: 25px;
 }
 
-.bannerButton1{
-    margin-left: 275px;
-}
-
-.bannerButton2{
-    margin: 0 10px;
-}
-
-.bannerButton3{
-    margin-right: 275px;
-}
-
 .bannerImg1{
     background: url("../img/banner-1.jpg") no-repeat;
+    margin-left: 275px;
 }
 
 .bannerImg2{
     background: url("../img/banner-2.jpg") no-repeat;
+    margin: 0 10px;
 }
 
 .bannerImg3{
     background: url("../img/banner-3.jpg") no-repeat;
+    margin-right: 275px;
 }
 
 .bannerImg1, .bannerImg2, .bannerImg3{
-    max-width: 300px;
-    max-height: 220px;
+    width: 300px;
+    height: 220px;
+    display: inline-block;
 }
 
 .bannerImg1:hover .bannerText1{
-    opacity: .6;
-    color: white;
+    opacity: .75;
+    background: black;
 }
 
 .bannerImg2:hover .bannerText2{
-    opacity: .6;
-    color: white;
+    opacity: .75;
+    background: black;
 }   
 
 .bannerImg3:hover .bannerText3{
-    opacity: .6;
-    color: white;
+    opacity: .75;
+    background: black;
 }
 
 .bannerText1, .bannerText2, .bannerText3{
     max-width: 100%;
     max-height: 100%;
-    background: black;
     opacity: 0;
     text-align:center;
     padding: 101px 110px;
+    color: white;
+    font-weight: bold;
 }
