--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ a{
     height: 25%;
 }
 
-.buttons{
+.headerButtons{
     background: black;
     width: 950px;
     height: 30px;
@@ -42,10 +42,13 @@ a{
     height: 100%;
 }
 
+.headerButtonImg{
+    width: 10px;
+    height: 10px;
+}
+
 .text{
     background: yellow;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto;
     margin-bottom: 25px;
 }
 
@@ -53,7 +56,7 @@ a{
     font-weight: bold;
     font-size: 25px;
     padding-top: 10px;
-    margin-left: 475px;
+    margin-left: 365px;
 }
 
 .textText{
@@ -108,24 +111,79 @@ a{
 }
 
 .bannerImg1:hover .bannerText1{
-    opacity: .75;
+    opacity: 1;
 }
 
 .bannerImg2:hover .bannerText2{
-    opacity: .75;
+    opacity: 1;
 }   
 
 .bannerImg3:hover .bannerText3{
-    opacity: .75;
+    opacity: 1;
 }
 
 .bannerText1, .bannerText2, .bannerText3{
-    max-width: 100%;
-    max-height: 100%;
-    opacity: 0;
     text-align:center;
+    opacity: 0;
     padding: 101px 110px;
     color: white;
     font-weight: bold;
+    background: rgba(34,41,49,0.8);
+}
+
+.footerButton1, .footerButton2, .footerButton3{
+    display: inline-block;
+    background: yellow;
+    color: black;
+    font-weight: bold;
+    max-width: 300px;
+    padding: 10px 100px;
+}
+
+.footerButtons{
+    position: absolute;
+    bottom: 75px;
+}
+
+.footerButton1{
+    margin-left: 340px;
+}
+
+.footerButton2{
+    margin: 0 10px;
+}
+
+.footerButton1:hover{
+    color: white;
     background: black;
+}
+
+.footerButton2:hover{
+    color: white;
+    background: black;
+}
+
+.footerButton3:hover{
+    color: white;
+    background: black;
+}
+
+.footerP{
+    margin: 0;
+    display:inline-block;
+    padding-top: 10px;
+}
+
+.footerImg{
+    width: 50px;
+    height: 50px;
+    float: left;
+}
+
+.footerButtonTitle{
+    padding-left: 10px;
+}
+
+.footerButtonText{
+    padding-left: 10px;
 }
