--- a/css/style.css
+++ b/css/style.css
@@ -82,8 +82,8 @@ a{
 }
 
 .footerLogo{
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 .images{
@@ -141,7 +141,8 @@ a{
 }
 
 .footerButtons{
-    position: absolute;
+    position: relative;
+    bottom: 40px;
 }
 
 .footerButton1{
@@ -185,4 +186,35 @@ a{
 
 .footerButtonText{
     padding-left: 10px;
+}
+
+.line{
+    border: 1px solid rgba(211, 211, 211, 0.9);
+    margin-left: 475px;
+    margin-right: 475px;
+}
+
+.footerTextText{
+    padding-top: 10px;
+}
+
+.footerTitleOverOns{
+    font-weight: bold;
+    font-size: 25px;
+}
+
+.footerTitleContact{
+    font-weight: bold;
+    font-size: 25px;
+    text-align: left;
+}
+
+.overOns{
+    float: left;
+    margin-left: 475px;
+}
+
+.contact{
+    float: right;
+    margin-right: 475px;
 }
