--- a/css/style.css
+++ b/css/style.css
@@ -168,16 +168,16 @@ a{
     background: black;
 }
 
-.footerP{
-    margin: 0;
-    display:inline-block;
-    padding-top: 10px;
-}
-
 .footerImg{
     width: 50px;
     height: 50px;
     float: left;
+}
+
+.footerP{
+    margin: 0;
+    display:inline-block;
+    padding-top: 10px;
 }
 
 .footerButtonTitle{
@@ -212,9 +212,24 @@ a{
 .overOns{
     float: left;
     margin-left: 500px;
+    max-width: 500px;
 }
 
 .contact{
     float: right;
     margin-right: 625px;
+}
+
+.item1Img, .item2Img, .item3Img{
+    width: 50px;
+    height: 50px;
+    float: left;
+}
+
+.item1Text, .item2Text, .item3Text{
+    color: lightgray;
+}
+
+.footerText{
+    margin-top: 30px;
 }
