--- a/css/style.css
+++ b/css/style.css
@@ -32,9 +32,9 @@ a{
     background: #222931;
     width: 950px;
     height: 30px;
+    position: absolute;
     margin-left: 12.5%;
     padding-left: 25px;
-    position: absolute;
     font-size: 12px;
     padding-top: 10px;
     padding-bottom: 5px;
@@ -56,23 +56,26 @@ a{
 
 .dropdown{
     display:none;
-    padding-left: 60px;
     margin: 0;
-    margin-top: 10px;
 }
 
 .dropdownButton:hover .dropdown {
-    display:block;
+    display: block;
+    position: absolute;
 }
 
 .buttonDropdown1, .buttonDropdown2, .buttonDropdown3{
+    display: block;
+    margin-left: 50px;
     color: white;
     font-weight: bold;
     padding-left: 10px;
+    background: #222931;
 }
 
 .buttonDropdown1{
     padding-right: 36px;
+    margin-top: 10px;
 }
 
 .buttonDropdown2{
@@ -337,6 +340,7 @@ li{
     padding: 25px 0;
     margin-left: 500px;
     margin-right: 500px;
+    margin-bottom: 75px;
 }
 
 .dienstenTitle{
@@ -344,23 +348,36 @@ li{
     font-size: 34px;
 }
 
-.hoverable{
-    color: #ffe718;
-}
-
-.hoverable:hover{
+.hoverable1:hover .tooltip1{
+    display: block;
     color: white;
     background: #aeb6be;
 }
-
-.tooltip1{
-    display: none;
+.hoverable2:hover .tooltip2{
+    display: block;
+    color: white;
+    background: #aeb6be;
 }
-
-.tooltip2{
-    display: none;
+.hoverable3:hover .tooltip3{
+    display: block;
+    color: white;
+    background: #aeb6be;
 }
-
-.tooltip3{
+  
+.hoverable1, .hoverable2, .hoverable3 {
+    position: relative;
+    display: inline-block;
+    color: #ffe718;
+}
+  
+.tooltip1, .tooltip2, .tooltip3 {
     display: none;
+    position: absolute;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    background: #aeb6be;
+    border: 1px solid red;
+    width: 200px;
+    height: 100px;
+    padding: 5px;
 }
